--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: pages-themes/architect@v0.2.0
+remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: [Sample page for Huixin Deng]
-description: [Yaeh!]
+title: [Adella]
+description: [Everything will be ok]
